Adding colored logging and cleaning up the project

--- a/ui/main.htm
+++ b/ui/main.htm
@@ -44,7 +44,7 @@
 
 		<!-- Chart with requests per minute -->
 		<div id="requests-chart">
-			<h2>Total Requests <small>for the last 10 seconds</small></h2>
+			<h2>Total Requests <small>for latest 10 seconds chunks</small></h2>
 			<div class="charts" id="chart_list"></div>
 		</div>
 
